Bug 103464 - Submenus with empty names can be created via Customize dialog
Summary: Submenus with empty names can be created via Customize dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks: Customise-Dialog
  Show dependency treegraph
 
Reported: 2016-10-24 15:16 UTC by Muhammet Kara
Modified: 2016-10-27 10:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Muhammet Kara 2016-10-24 15:16:52 UTC
Description:
Customize dialog allows adding submenus with empty names.

Steps to Reproduce:
1. Go to Tools > Customize > Menus
2. Click Modify > Add Submenu...
3. Click "OK" without entering a name.

Actual Results:  
A submenu with an empty name is added to the selected menu.

Expected Results:
It should warn user to provide a name for the submenu, or do nothing when no name is given.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:37.0) Gecko/20100101 Firefox/37.0
Comment 1 Yousuf Philips (jay) (retired) 2016-10-24 19:23:45 UTC
Yes it happens in the Menu as well as the Context Menu tabs of the dialog. The 'OK' button should be disabled when the field is empty.
Comment 2 Muhammet Kara 2016-10-25 05:50:54 UTC
I'll also look into this while I am still working on the same dialog. tdf#103160
Comment 3 Muhammet Kara 2016-10-26 07:29:31 UTC
It turns out that the bug affects all places where the SvxNameDialog is used. You can have Toolbars, Toolbar Items, Menus, Submenus... with empty names, by creating new ones, or by renaming the existing ones.
Comment 4 Commit Notification 2016-10-27 09:27:14 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0c2272786bc8663554ea7d4a72f03379e0d6608d

tdf#103464 Don't allow empty names in SvxNameDialog

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.