tdf#103464 Don't allow empty names in SvxNameDialog

Menus, context menus, toolbars, toolbar items...
could be created with empty names, and could be
renamed to have empty names before this patch.

Change-Id: Ic383f16955746002aa3ad69406bac855cdd58d2d